Fixed background white space issue add second part

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,13 @@
 body {
     font-family: 'Courier New', Courier, monospace;
+    padding: 0px;
+    margin: 0px; /*this allows background colour to reach edges */
+
+}
+
+.firstBackground {
     background-color: #1f2937;
+    display: block;
 }
 
 .firstSection {
@@ -14,7 +21,9 @@ body {
 .firstSection ul {
     list-style-type: none;
     display: flex;
-    gap: 8px;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
     margin-right: 20px;
     
 }
@@ -22,4 +31,24 @@ body {
 .firstSection a {
     text-decoration: none;
     color: white;
+}
+
+.secondSection {
+    background-color: #1f2937;
+    display: flex;
+    padding: 60px;
+    color: white;
+    justify-content: center;
+}
+
+.secondSectionRight {
+    height: 200px;
+    width: 550px;
+    background-color: gray;
+}
+
+.secondSectionLeft {
+    display: flex;
+    max-width: 550px;
+    flex-wrap: wrap;
 }
